@@ -1,0 +1,10 @@
+.. _ref-tools:
+.. module:: trytond.tools
+
+=============
+Miscellaneous
+=============
+
+.. method:: resolve(name)
+
+Resolve a dotted name to a global object.
